--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ header {
     }
     .pictureStuff {
         flex-grow: inherit;
+        border-radius: 2px 16px;
     }
 }
 
@@ -153,6 +154,7 @@ header {
     .pictureStuff {
         width: 400px;
         padding: 105px;
+        border-radius: 2px 16px;
     }
     .Norms {
         font-size: 25px;
@@ -164,6 +166,7 @@ header {
 
 .pictureStuff {
     vertical-align: top;
+    border-radius: 2px 16px;
 }
 
 .Norms {
